# WebAssemblyTutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  c_cpp_properties.json  launch.json  tasks.json
00-hello/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  hello.cpp
embind/: CMakeLists.txt  embind-test.js  embind.cpp  shell.html
module/: CMakeLists.txt  model-test.js  module.cpp  module.h  module.html  module.idl  post.js  pre.js  shell.html  types.d.ts
webgpu/: CMakeLists.txt  shell.html  webgpu.cpp  webgpu.h  webgpu.idl
webidl/: CMakeLists.txt  glue.cpp  glue.js  post.js  shell.html  test.h  test.idl  test.js
